# plant_motion_planning

./: .gitignore  CMakeLists.txt  README.md  package.xml  path_smoothed.pkl  plant.urdf  plant_params.pkl  setup.py  setup_project.py  temp.urdf  trial.bullet  visualShapeBench.json_0.json
bash_scripts/: prog1.sh  prog2.sh
make_envs/: createMultiBodyLinks.py  createMultiBodyLinks_edit.py  createVisualShape.py  debug_joint_limits_wo_branches.py  rand_gen_plants_programmatically.py  rand_gen_plants_programmatically_w_branches.py  rand_gen_plants_programmatically_wo_branches.py  replicate_urdf_plant.py  replicate_urdf_plant_playgrnd.py  visualize_urdf_plant.py
models/: debug_sphere.urdf  plant.urdf  plant_params.pkl  short_floor.urdf  wall_long.urdf  wall_short.urdf
plant_motion_planning/: analyze_data.py  env.py  planner.py  plant.py  plant_filter.py  plant_sample_generation.py  rand_gen_plants_programmatically_main.py  representation.py  utils.py  visualization_utils.py
plant_motion_planning.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pybullet_tools/: kuka_primitives.py  pr2_utils.py  utils.py
scripts/: avoid_all.py  avoid_all_multi_branch.py  avoid_all_multi_branch.sh  avoid_all_single_branch.py  avoid_all_single_branch.sh  avoid_all_with_controls.sh  base_planning.py  bispace_planning.py  display_in_simulation.py  env_visualizer.py  ignore_all_multi_branch.py  ignore_all_multi_branch.sh  ignore_all_single_branch.py  ignore_all_single_branch.sh  ignore_all_with_controls.sh  kuka_movement_notes.txt  move_kuka_avoid_all.py  move_kuka_branches_angle_based_v1.py  (+41 more)
(+48 files in other folders)
